--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,9 @@
         <activity android:name=".ui.activity.TextViewPagerActivity" />
         <activity android:name=".ui.activity.MainActivity" />
         <activity android:name=".ui.activity.LoginActivity" />
-        <activity android:name=".ui.activity.RegistActivity"></activity>
+        <activity android:name=".ui.activity.RegistActivity" />
+        <activity android:name=".ui.activity.SetNickNameActivity" />
+        <activity android:name=".ui.activity.UpdateRoleActivity" />
     </application>
 
 </manifest>
