--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
         <activity android:name=".ui.activity.SetNickNameActivity" />
         <activity android:name=".ui.activity.UpdateRoleActivity" />
         <activity android:name=".ui.activity.MyOrderListActivity" />
+        <activity android:name=".ui.activity.MyAccountActivity" />
     </application>
 
 </manifest>
