--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     package="com.mango"
     android:installLocation="auto">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <supports-screens
         android:anyDensity="true"
         android:largeScreens="true"
@@ -27,7 +30,7 @@
             android:name="design_height"
             android:value="1334" />
 
-        <activity android:name=".ui.activity.LoginActivity"
+        <activity android:name=".ui.activity.MainActivity"
             android:windowSoftInputMode="stateHidden|stateUnchanged" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -37,7 +40,7 @@
         </activity>
         <activity android:name=".ui.activity.TabViewPagerActivity" />
         <activity android:name=".ui.activity.TextViewPagerActivity" />
-        <activity android:name=".ui.activity.MainActivity" />
+        <!--<activity android:name=".ui.activity.MainActivity" />-->
 
         <activity android:name=".ui.activity.RegistActivity" />
         <activity android:name=".ui.activity.SetNickNameActivity"
