--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         applicationId "com.mango"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -40,7 +40,7 @@ dependencies {
         exclude module: 'okhttp'
     }
     compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:multidex:1.0.0'
+    compile 'com.android.support:multidex:1.0.1'
     compile 'com.zhy:autolayout:1.4.5'
     compile 'com.github.hackware1993:MagicIndicator:1.5.0'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
@@ -61,6 +61,10 @@ dependencies {
     compile 'com.tbruyelle.rxpermissions:rxpermissions:0.7.1@aar'
     compile 'com.orhanobut:logger:1.15'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.chanven.lib:cptr:1.1.0'
+    compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.github.open-android:RoundedImageView:v1.0.0'
     apt 'com.google.dagger:dagger-compiler:2.0.2'
     provided 'javax.annotation:jsr250-api:1.0'
+    compile 'com.bigkoo:convenientbanner:2.0.5'
 }
