--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+   <!-- <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />-->
 
     <supports-screens
         android:anyDensity="true"
@@ -30,7 +31,7 @@
             android:name="design_height"
             android:value="1334" />
 
-        <activity android:name=".ui.activity.MainActivity"
+        <activity android:name=".ui.activity.LoginActivity"
             android:windowSoftInputMode="stateHidden|stateUnchanged" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -40,7 +41,7 @@
         </activity>
         <activity android:name=".ui.activity.TabViewPagerActivity" />
         <activity android:name=".ui.activity.TextViewPagerActivity" />
-        <!--<activity android:name=".ui.activity.MainActivity" />-->
+        <activity android:name=".ui.activity.MainActivity" />
 
         <activity android:name=".ui.activity.RegistActivity" />
         <activity android:name=".ui.activity.SetNickNameActivity"
