--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,9 +15,24 @@ android {
         multiDexEnabled true
     }
 
+    signingConfigs {
+        debug {
+        }
+
+        release {
+            storeFile file("mango.jks")
+            storePassword "mango123456"
+            keyAlias "mango"
+            keyPassword "mango123456"
+        }
+    }
+
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            zipAlignEnabled true
+            shrinkResources true
+            signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
 
@@ -34,7 +49,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     //compile 'com.github.CarGuo:FrescoUtils:v1.0.6'//https://github.com/CarGuo/FrescoUtils
     compile('com.squareup.retrofit2:retrofit:2.1.0') {
         exclude module: 'okhttp'
@@ -64,7 +79,8 @@ dependencies {
     compile 'com.chanven.lib:cptr:1.1.0'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.github.open-android:RoundedImageView:v1.0.0'
+    compile 'com.bigkoo:convenientbanner:2.0.5'
     apt 'com.google.dagger:dagger-compiler:2.0.2'
     provided 'javax.annotation:jsr250-api:1.0'
-    compile 'com.bigkoo:convenientbanner:2.0.5'
+    compile files('libs/Baidu_Mtj_3.8.0.2.jar')
 }
