--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,14 @@ android {
     }
 
     buildTypes {
+        debug {
+            minifyEnabled true
+            zipAlignEnabled true
+            shrinkResources true
+            signingConfig signingConfigs.release
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+
         release {
             minifyEnabled true
             zipAlignEnabled true
