--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,9 +29,9 @@ android {
 
     buildTypes {
         debug {
-            minifyEnabled true
-            zipAlignEnabled true
-            shrinkResources true
+            minifyEnabled false
+            zipAlignEnabled false
+            shrinkResources false
             signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -62,6 +62,7 @@ dependencies {
     compile('com.squareup.retrofit2:retrofit:2.1.0') {
         exclude module: 'okhttp'
     }
+    compile files('libs/Baidu_Mtj_3.8.0.2.jar')
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.zhy:autolayout:1.4.5'
@@ -88,8 +89,8 @@ dependencies {
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.github.open-android:RoundedImageView:v1.0.0'
     compile 'com.bigkoo:convenientbanner:2.0.5'
+    compile 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
+    compile 'com.j256.ormlite:ormlite-android:4.48'
     apt 'com.google.dagger:dagger-compiler:2.0.2'
     provided 'javax.annotation:jsr250-api:1.0'
-    compile files('libs/Baidu_Mtj_3.8.0.2.jar')
-    compile 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
 }
