--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.GET_TASKS" />
 
     <!-- 百度统计需要申明的权限 -->
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -42,8 +43,10 @@
             android:name="design_height"
             android:value="1334" />
 
-        <activity android:name=".ui.activity.LoginActivity"
-            android:windowSoftInputMode="stateHidden|stateUnchanged" >
+        <activity
+            android:name=".ui.activity.WelcomeActivity"
+            android:theme="@style/Theme.Start"
+            android:windowSoftInputMode="stateHidden|stateUnchanged">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -52,10 +55,11 @@
         </activity>
         <activity android:name=".ui.activity.TabViewPagerActivity" />
         <activity android:name=".ui.activity.TextViewPagerActivity" />
-        <activity android:name=".ui.activity.MainActivity" />
-
+        <activity android:name=".ui.activity.MainActivity"
+            android:launchMode="singleTask"/>
         <activity android:name=".ui.activity.RegistActivity" />
-        <activity android:name=".ui.activity.SetNickNameActivity"
+        <activity
+            android:name=".ui.activity.SetNickNameActivity"
             android:windowSoftInputMode="stateHidden|stateUnchanged" />
         <activity android:name=".ui.activity.UpdateRoleActivity" />
         <activity android:name=".ui.activity.MyOrderListActivity" />
@@ -63,8 +67,15 @@
         <activity android:name=".ui.activity.SettingActivity" />
         <activity android:name=".ui.activity.ProfileInfoActivity" />
         <activity android:name=".ui.activity.MyClassesActivity" />
+        <activity android:name=".ui.activity.LoginActivity" />
 
-        <!--注册微信回调 WXEntryActivity -->
+        <receiver android:name=".receiver.NetReceiver">
+            <intent-filter>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+            </intent-filter>
+        </receiver>
+
+        <!-- 注册微信回调 WXEntryActivity -->
         <activity
             android:name=".wxapi.WXEntryActivity"
             android:exported="true"
@@ -72,7 +83,7 @@
             android:launchMode="singleTop"
             android:theme="@android:style/Theme.Translucent" />
 
-        <!--百度统计 start-->
+        <!-- 百度统计 start -->
         <!-- 您从百度网站获取的APP KEY -->
         <meta-data
             android:name="BaiduMobAd_STAT_ID"
@@ -101,14 +112,16 @@
             android:name="BaiduMobAd_CELL_LOCATION"
             android:value="true" />
         <!-- 是否获取GPS位置信息，默认为true -->
-        <!--<meta-data
+        <!--
+            <meta-data
             android:name="BaiduMobAd_GPS_LOCATION"
-            android:value="true" />-->
+            android:value="true" />
+        -->
         <!-- 是否获取WIFI位置信息，默认为true -->
         <meta-data
             android:name="BaiduMobAd_WIFI_LOCATION"
             android:value="true" />
-        <!--百度统计 end-->
+        <!-- 百度统计 end -->
 
     </application>
 
