--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,4 +93,5 @@ dependencies {
     compile 'com.j256.ormlite:ormlite-android:4.48'
     apt 'com.google.dagger:dagger-compiler:2.0.2'
     provided 'javax.annotation:jsr250-api:1.0'
+    compile 'cn.finalteam:galleryfinal:1.4.8.7'
 }
