--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,7 +90,9 @@ dependencies {
     compile 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
     compile 'com.j256.ormlite:ormlite-android:4.48'
     compile 'liji.library.dev:citypickerview:1.1.0'
+    compile 'com.github.YancyYe:GalleryPick:1.2.1'
     apt 'com.google.dagger:dagger-compiler:2.0.2'
     provided 'javax.annotation:jsr250-api:1.0'
-    compile 'com.github.YancyYe:GalleryPick:1.2.1'
+    compile files('libs/jcore-android-1.1.6.jar')
+    compile files('libs/jpush-android-3.0.8.jar')
 }
