--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -97,7 +97,8 @@
         <activity
             android:name=".ui.activity.PlaceOrderActivity"
             android:windowSoftInputMode="stateHidden|stateUnchanged" />
-        <activity android:name=".ui.activity.UpgradeToStudentActivity" />
+        <activity android:name=".ui.activity.UpgradeToStudentActivity"
+            android:windowSoftInputMode="stateHidden|stateUnchanged" />
         <activity android:name=".ui.activity.CourseDetailActivity" />
         <activity android:name=".ui.activity.SuccessActivity" />
         <activity android:name=".ui.activity.OrderDetailActivity" />
@@ -158,7 +159,7 @@
 
         <provider
             android:name="android.support.v4.content.FileProvider"
-            android:authorities="com.android.fileprovider"
+            android:authorities="cn.com.mangopi.android.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
