--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -114,6 +114,7 @@
         <activity android:name=".ui.activity.MessageListActivity" />
         <activity android:name=".ui.activity.PayResultActivity" />
         <activity android:name=".ui.activity.FavListActivity" />
+        <activity android:name=".ui.activity.MemberTrendActivity" />
 
         <receiver android:name=".receiver.NetReceiver">
             <intent-filter>
